--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ package-lock.json
 skyportal_image_cache
 .tokens.yaml
 .vscode
+.dont
 
 # Templated files
 static/js/components/templates/Main.jsx
