--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ skyportal_image_cache
 .tokens.yaml
 .vscode
 .dont
+.env
+admin_scripts/.env
 
 # Templated files
 static/js/components/templates/Main.jsx
